# zal

./: .gitignore  LICENSE.md  README.md
.github/workflows/: check-backend.yml  check-local-server.yml  conflicts.yml
local_server/: js to exe command.txt  package-lock.json  package.json  server.js
python_scripts/: generate_exe.txt  get_process_icon.py
task_manager/: create_taskmanager_exe.txt  task_manager.py
zal_app/: .env  .gitignore  analysis_options.yaml  pubspec.yaml
zal_app/android/: build.gradle
zal_app/android/app/: build.gradle  google-services.json
zal_app/dart_wormhole_william/: CMakeLists.txt
zal_app/ios/: Podfile  firebase_app_id_file.json
zal_app/ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist
zal_app/ios/Runner.xcodeproj/: project.pbxproj
zal_app/lib/: firebase_options.dart  main.dart
zal_app/lib/Functions/: admob_consent_helper.dart  analytics_manager.dart  file_manager.dart  interstitial_ad.dart  local_database_manager.dart  models.dart  theme.dart  utils.dart  webrtcModel.dart
zal_app/lib/Screens/: cpu_screen.dart  gpu_screen.dart  network_screen.dart  ram_screen.dart  storages_screen.dart
zal_app/lib/Widgets/: card_widget.dart  chart_widget.dart  heavy_processes_widget.dart  horizontal_circle_progressbar.dart  inline_ad.dart  staggered_gridview.dart  stress_test_button.dart  title_widget.dart  wait_for_connection_widget.dart
zal_console/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings  ZalConsole.cs  ZalConsole.csproj  ZalConsole_TemporaryKey.pfx  ZalDLL.sln  packages.config
zal_console/Constants/Models/: BatteryData.cs  ComputerData.cs  CpuInfo.cs  CrystalDiskInfo.cs  GpuData.cs  MotherboardData.cs  NetworkSpeed.cs  RamPieceData.cs  StorageData.cs
zal_console/HelperFunctions/: ComputerDataGetter.cs  FpsDataGetter.cs  GlobalClass.cs  Logger.cs  ProcessesGetter.cs  TaskManagerGetter.cs
zal_console/HelperFunctions/SpecificFunctions/: BatteryDataGetter.cs  CpuInfoGetter.cs  CrystalDiskInfoGetter.cs  GpuUtilizationGetter.cs  MonitorDataGetter.cs  NetworkSpeedGetter.cs
zal_console/Properties/: AssemblyInfo.cs
zal_program/: .editorconfig  .env  LICENSE.md  README.md  Zal.sln  pubspec.yaml
zal_program/Zal/: App.config  App.xaml  App.xaml.cs  Backend.cs  CustomTheme.xaml  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  Resource1.Designer.cs  Resources.Designer.cs  Resources.resx  Zal.csproj  packages.config
zal_program/Zal/Functions/: Utils.cs
zal_program/Zal/Pages/: AuthorizedPage.xaml  AuthorizedPage.xaml.cs  ConfigurationsForm.Designer.cs  ConfigurationsForm.cs  ConfigurationsForm.resx  ConnectionSettingsForm.Designer.cs  ConnectionSettingsForm.cs  LoginPage.xaml  LoginPage.xaml.cs
zal_program/Zal/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
zal_program/Zal/Resources/: Processes.json
zal_program/lib/: main.dart
zal_program/lib/Functions/: analytics_manager.dart  local_database_manager.dart  programs_runner.dart  theme.dart  utils.dart  webrtcModel.dart
zal_program/lib/Screens/: authorized_screen.dart  (+1 more)
zal_program/windows/: CMakeLists.txt
(+192 files in other folders)
